# EncryptedFS

./: CMakeLists.txt  README.md  encryptedFilesystem.sh
src/: AesCipher.cpp  AesCipher.h  BasicFile.cpp  BasicFile.h  CMakeLists.txt  CipherBase.h  encryptedfs.cpp  encryptedfs.h  fsutils.cpp  fsutils.h  logger.cpp  logger.h  main.cpp
